# service-pilot

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
scripts/: generate-icon.swift
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
