[package]
name = "service-pilot"
version = "0.1.0"
description = "Service Pilot local macOS service manager"
authors = ["Local"]
edition = "2021"

[lib]
name = "service_pilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.2", features = [] }
